fix navbar alignment in mobile

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -8215,8 +8215,12 @@ body {
   display: none;
 }
 .navbar-brand {
-  padding-top: 11px;
-  padding-bottom: 17px;
+  padding: 15px 10px 15px 15px;
+}
+@media (min-width: 768px) {
+  .navbar-brand {
+    padding-top: 11px;
+  }
 }
 @media (max-width: 767px) {
   .nav > li,
@@ -8230,6 +8234,9 @@ body {
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #2e9df7;
+}
+.navbar-toggle {
+  margin: 12px 10px 5px 0;
 }
 /*
  * Side navigation
