--- a/public/assets/less/nav.less
+++ b/public/assets/less/nav.less
@@ -1,10 +1,12 @@
 .navbar-brand {
-  padding-top: 11px;
-  padding-bottom: 17px;
+	padding: 15px 10px 15px 15px;
+	@media (min-width: @screen-sm-min) {
+  		padding-top: 11px;
+  	}
 }
 .nav > li, .nav > li > a {
 	@media (max-width: @screen-xs-max) {
-		display: inline-block; 
+		display: inline-block;
 	}
 }
 .navbar-default .navbar-text {
@@ -12,4 +14,7 @@
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
 	color: @brand-primary;
+}
+.navbar-toggle {
+	margin: 12px 10px 5px 0;
 }
